# ai-chats

./: .gitignore  .prettierignore  Cargo.toml  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
.husky/: pre-commit
crates/ai-chats-core/: Cargo.toml
crates/ai-chats-core/src/: aggregate.rs  lib.rs  list.rs  paths.rs  sqlite_util.rs  text.rs  types.rs
crates/ai-chats-core/src/messages/: claude.rs  codex.rs  cursor.rs  grok.rs  mod.rs  opencode.rs
crates/ai-chats-core/src/providers/: claude.rs  codex.rs  cursor.rs  grok.rs  mod.rs  opencode.rs
crates/ai-chats-core/tests/: claude_list.rs  codex_list.rs  cursor_list.rs  grok_list.rs  list_and_aggregate.rs  messages_all.rs  opencode_list.rs  serde_camel_case.rs
crates/ai-chats-core/tests/fixtures/cursor/chats/workspace1/chat1/: store.db
crates/ai-chats-core/tests/fixtures/opencode/: opencode.db
scripts/: build-desktop-launcher.sh  install-desktop-shortcut.sh  launch-desktop.sh
scripts/lib/: runtime.sh
src/: main.tsx  routeTree.gen.ts  router.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AppReadyGate.tsx  ChatItem.test.tsx  ChatItem.tsx  ChatList.test.tsx  ChatList.tsx  ChatListSkeleton.tsx  ExportMarkdownButton.test.tsx  ExportMarkdownButton.tsx  Footer.tsx  Header.tsx  LanguageSwitcher.tsx  LoadingSpinner.test.tsx  LoadingSpinner.tsx  MessageList.test.tsx  MessageList.tsx  NavigationProgress.test.tsx  Pagination.tsx  (+4 more)
(+34 files in other folders)
