[package]
name = "ai-chats"
version = "0.1.0"
description = "Desktop shell for AI Chats — aggregates Cursor, Grok, Codex, OpenCode, and Claude sessions"
authors = ["AI Chats"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
