[package]
name = "ai-chats-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local chat aggregation core for AI Chats desktop"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
walkdir = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
